# wukong-wallpaper

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/: deploy.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/utils/: const.ts
